examples/test/testpolicy1845.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1845
  namespace: namespace351
spec:
  podSelector:
    matchLabels:
      key4: value34
      key41: value42
      key47: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value37
          key30: value15
          key3: value23
      podSelector:
        matchLabels:
          key32: value41
          key4: value1
